Fixed overflow issue, and width of element

--- a/assets/styles/components.scss
+++ b/assets/styles/components.scss
@@ -309,7 +309,7 @@
 }
 
 .button {
-  width: max-content;
+  //width: max-content;
   margin: auto 0;
   padding: 6px 20px;
   border-radius: var(--size-rounded-control);
